$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-01-14 [O] Added universal javascript function selectAll() to be used in all pages with a select/deselect all feature {Nibbler,SaWey}
2009-01-14 [M] Removed include/smtp.inc.php since it is no longer used. {Nibbler}
2009-01-14 [A] Added the albmgr.js to carry out the album and picture manger functionality - thread 57113 {Sameera}
2009-01-14 [O] Cleaned up album/picture manager file codes - thread 57113 {Sameera}
2009-01-14 [B] Fixed duplicate and blank albums in edit_one_pic album list {Paver}
2009-01-14 [C] Remove the picture background color in slideshow - thread 57055 {Sameera}
2009-01-12 [B] Fixed album manager creating user albums in 'No category' - thread 57536 {Paver}
2009-01-10 [A] Implemented admin tool to convert keyword separator {Paver}
2009-01-10 [O] Added heredoc to install.php and cleaned up code {Paver}
2009-01-10 [C] Corrected non Internationalized string in jquery.sort.js {Frantz}
2009-01-10 [C] Fixed typo in french.php and corrected the file accordingly to the english.php {Frantz} 
2009-01-10 [B] Fixed missing 'abbr' field for languages table in basic.sql {Paver}
2009-01-09 [O] Cleaned up album/picture manager and language files {Paver}
2009-01-08 [A] Added language keys for admin tool to convert keyword separator {Paver}
2009-01-08 [A] Added config option for batch add process limit {Nibbler}
2009-01-08 [A] Added config option for number of comments per page {Nibbler}
2009-01-08 [A] Added plugin hook 'theme_img_navbar' to function theme_html_img_nav_menu {Paver}