@@ -376,3 +376,7 @@ INSERT INTO CPG_config VALUES ('batch_proc_limit', '2');
 UPDATE CPG_languages SET `abbr` = 'en' WHERE `lang_id`='english';
 UPDATE CPG_languages SET `abbr` = 'de' WHERE `lang_id`='german';
 UPDATE CPG_languages SET `abbr` = 'fr' WHERE `lang_id`='french';
+
+TRUNCATE TABLE CPG_exif;
+ALTER TABLE CPG_exif CHANGE `filename` `pid` int(11) NOT NULL;
+ALTER TABLE CPG_exif DROP INDEX `filename`, ADD PRIMARY KEY ( `pid` );
